# drummer

./: .gitignore  404.html  CLAUDE.md  Makefile  README.md  ROADMAP.md  TODO.md  biome.json  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml
attribution/: index.html
cli-reference/: index.html
docs/decisions/: 001-quickjs-scripting.md  002-yaml-frontmatter-format.md
docs/site/: attribution.md  cli-reference.md  getting-started.md  index.md  mcp-tools.md  scripting-api.md
docs/superpowers/plans/: 2026-05-25-phase-1-foundation.md  2026-05-25-phase-2-storage.md  2026-05-25-phase-3-http-engine.md  2026-05-26-phase-4-api-mcp.md  2026-05-26-phase-5-react-ui.md  2026-05-27-phase-6-scripting.md  2026-05-27-phase7-mock-server-tutorial.md  2026-05-28-phase10-distribution.md  2026-05-28-phase8-graphql.md  2026-05-28-phase9-oauth-cookies.md  2026-05-29-fixes-and-phase-15-request-editing.md  2026-05-29-phase-11-workspaces.md  2026-05-29-phase-12-theming.md  2026-05-29-phase-13-tutorial-cohesion.md  2026-05-29-phase-14-wikidata-graphql.md  2026-05-30-phase-16-environment-editor.md  2026-05-30-phase-17-sent-request-inspector.md  2026-05-30-phase-18-agent-ergonomic-send.md
docs/superpowers/specs/: 2026-05-25-drummer-design.md  2026-05-25-phase-3-http-engine-design.md  2026-05-26-phase-4-api-mcp-design.md  2026-05-26-phase-5-react-ui-design.md  2026-05-27-phase-6-scripting-design.md  2026-05-27-phase7-design.md  2026-05-28-phase-10-distribution.md  2026-05-28-phase8-graphql-design.md  2026-05-28-phase9-oauth-cookies-design.md  2026-05-29-phase-11-workspaces-design.md  2026-05-29-phase-12-theming-design.md  (+7 more)
drummer/: cli.py
drummer/api/: app.py  deps.py
drummer/core/: agent_shaping.py  cookies.py  debugger.py  encoding.py  engine.py  oauth.py  scripting.py  variables.py
drummer/mock/: DATA_ATTRIBUTION.md
formula/: drummer.rb
frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
getting-started/: index.html
mcp-tools/: index.html
scripting-api/: index.html
scripts/: build_wikidata_snapshot.py  dist.py  pre-commit
search/: search_index.json
stubs/: quickjs.pyi
stubs/fastapi_mcp/: __init__.pyi
stubs/graphql/: __init__.pyi
stubs/jsonpath_ng/: __init__.pyi
tests/e2e/: conftest.py  test_smoke.py
tests/integration/: conftest.py  test_agent_route.py  test_cookies_persistence.py  test_cookies_routes.py  test_environments_routes.py  test_graphql_introspect.py  test_graphql_send.py  test_history_routes.py  test_mcp_tools.py  test_mock_routes.py  test_oauth_send.py  test_project_route.py  test_requests_routes.py  test_send_route.py  test_settings_routes.py  test_tutorial_route.py  test_wikidata_route.py  test_workspaces_routes.py
tests/unit/: test_agent_shaping.py  test_cli.py  test_cookies.py  test_cookies_persistence.py  test_db_models.py  test_debugger.py  test_encoding.py  test_engine.py  test_formats.py  test_graphql_engine.py  test_graphql_introspect.py  test_mock_routes.py  test_oauth.py  test_project.py  test_scripting.py  test_tutorial.py  test_variables.py  test_wikidata_mock.py  test_workspaces.py
(+101 files in other folders)
