[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drummer"
version = "0.1.0"
description = "A local, standalone REST client — free alternative to Postman/Insomnia/Bruno"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "quickjs>=1.19",
    "python-frontmatter>=1.1",
    "pydantic>=2.7",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "fastapi-mcp>=0.3",
    "chardet>=5.2",
    "pyyaml>=6",
    "sse-starlette>=0.10",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pyright>=1.1",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
]

[project.scripts]
drummer = "drummer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["drummer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # docstrings — concise code over coverage
    "COM812", # trailing comma — conflicts with formatter
    "ISC001", # implicit string concat — conflicts with formatter
    "ERA001", # commented-out code — too aggressive
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "ANN", "S603"]  # S105/S106: test fixtures use dummy credentials
"drummer/cli.py" = ["FBT", "RSE102"]  # Typer CLI: bool flags + idiomatic raise typer.Exit()
"stubs/**" = ["ANN401", "N818", "UP035"]  # Stubs mirror third-party APIs; Any + legacy typing are required

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
